# arxiv-research-agent

./: .gitignore  README.html  docker-compose.yml  main.py  pyproject.toml
backend/: Dockerfile  pyproject.toml
backend/src/: main.py  model.py
backend/src/agent/: graph.py  paper_processor.py  tools.py
backend/src/crawler/: scraper.py
config/: load_env.py
frontend/: Dockerfile
frontend/src/: main.py
shared/src/: domain.py  interfaces.py
src/: main.py
src/crawler/: scraper.py
src/interfaces/: interfaces.py
src/utils/: log_config.py
